SCISOFT-CORE: change from using new numbers to value of method